IOS AND ANDROID BUILD

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,27 +1,128 @@
+name: Build & Release
+
 on:
-  push: #pull_request:
+  push:
     branches: 
       - main
+      - master
       - workflow
 
-name: "Build & Release Android App"
 jobs:
-  build:
+  build-android:
+    name: Android Build
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - uses: actions/setup-java@v1
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: Setup Java
+        uses: actions/setup-java@v3
         with:
+          distribution: 'zulu'
           java-version: '17'
-      - uses: subosito/flutter-action@v1
+
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.24.3'
           channel: 'stable'
-      - run: flutter pub get
-      - run: flutter build apk --split-per-abi
-      - name: Push to Release
-        uses: ncipollo/release-action@v1
+
+      - name: Install Dependencies
+        run: flutter pub get
+
+      - name: Build APK
+        run: flutter build apk --split-per-abi
+
+      - name: Upload Android Artifact
+        uses: actions/upload-artifact@v3
         with:
-          artifacts: "build/app/outputs/apk/release/*"
-          tag: v1.0.${{ github.run_number }}
-          token: ${{ secrets.TOKEN}}
+          name: android-artifacts
+          path: build/app/outputs/apk/release/*.apk
+          retention-days: 1
+
+  build-ios:
+    name: iOS Build
+    runs-on: macos-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          channel: 'stable'
+          flutter-version: '3.24.3'
+          architecture: x64
+
+      - name: Install CocoaPods
+        run: |
+          sudo gem uninstall cocoapods
+          sudo gem install cocoapods -v 1.15.2
+
+      - name: Configure iOS Deployment Target
+        run: |
+          cd ios
+          /usr/libexec/PlistBuddy -c "Set :MinimumOSVersion 13.0" Flutter/AppFrameworkInfo.plist
+
+      - name: Install Flutter Dependencies
+        run: flutter pub get
+
+      - name: Install iOS Dependencies
+        run: |
+          cd ios
+          rm -rf Pods Podfile.lock
+          pod repo update
+          pod install
+
+      - name: Build iOS App
+        run: flutter build ios --release --no-codesign
+
+      - name: Create Payload Directory
+        run: mkdir Payload
+        working-directory: build/ios/iphoneos
+
+      - name: Move App to Payload
+        run: mv Runner.app Payload/
+        working-directory: build/ios/iphoneos
+
+      - name: Create IPA File
+        run: zip -r FlutterIpaExport.ipa Payload
+        working-directory: build/ios/iphoneos
+
+      - name: Upload iOS Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: ios-artifacts
+          path: build/ios/iphoneos/FlutterIpaExport.ipa
+          retention-days: 1
+
+  release:
+    name: Create Release
+    needs: [build-android, build-ios]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download Android Artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: android-artifacts
+          path: android-artifacts
+
+      - name: Download iOS Artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: ios-artifacts
+          path: ios-artifacts
+
+      - name: Create Release
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: v1.0.${{ github.run_number }}
+          name: Release v1.0.${{ github.run_number }}
+          files: |
+            android-artifacts/*.apk
+            ios-artifacts/*.ipa
+          body: |
+            New Release v1.0.${{ github.run_number }}
+            
+            Contains both Android and iOS builds
+          token: ${{ secrets.TOKEN }}
