--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,17 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_riverpod: ^2.6.1
+  flutter_screenutil: ^5.9.3
+  freezed_annotation: ^2.4.4
+  flutter_remix: ^0.0.3
+  go_router: ^14.6.0
+  google_fonts: ^6.2.1
+  get_it: ^8.0.2
+  dio: ^5.7.0
+  connectivity_plus: ^6.1.0
+  flash: ^3.1.1
+  shared_preferences: ^2.3.3
 
 dev_dependencies:
   flutter_test:
